--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReZhihuDaily"
         android:networkSecurityConfig="@xml/network_config">
-        <activity android:name=".ui.NewsContentActivity"></activity>
+        <activity
+            android:name=".ui.NewsContentActivity"
+            android:theme="@style/NewsContentTheme"></activity>
         <activity android:name=".ui.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
