--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rezhihudaily">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ReZhihuDaily"
-        android:networkSecurityConfig="@xml/network_config">
+        android:theme="@style/Theme.ReZhihuDaily">
+        <activity android:name=".activity.CommentActivity"></activity>
         <activity
-            android:name=".ui.NewsContentActivity"
-            android:theme="@style/NewsContentTheme"></activity>
-        <activity android:name=".ui.HomeActivity">
+            android:name=".activity.NewsContentActivity"
+            android:theme="@style/NewsContentTheme" />
+        <activity android:name=".activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
